--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   </style>
 </head>
 
-<!-- <body class="shower full"> -->
-<body class="shower">
+<body class="shower full">
   <header class="caption">
     <h1>Веб-разработка</h1>
     <p>Лекция 8: СЕО и оптимизация</p>
@@ -200,47 +199,102 @@
   <!-- TODO Поисковые системы -->
   <section class="slide">
     <h2>Поисковые системы</h2>
-    <ul>
-      <li><b>1994</b>: Yahoo!</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li><b>1994</b>: Yahoo!</li>
+      </ul>
+      <figure>
+        <img src="img/search.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
     <h2>Поисковые системы</h2>
-    <ul>
-      <li><b>1994</b>: Yahoo!</li>
-      <li><b>1994</b>: WebCrawler</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li><b>1994</b>: Yahoo!</li>
+        <li><b>1994</b>: WebCrawler</li>
+      </ul>
+      <figure>
+        <img src="img/search.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by  / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
     <h2>Поисковые системы</h2>
-    <ul>
-      <li><b>1994</b>: Yahoo!</li>
-      <li><b>1994</b>: WebCrawler</li>
-      <li><b>1995</b>: Lycos и AltaVista</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li><b>1994</b>: Yahoo!</li>
+        <li><b>1994</b>: WebCrawler</li>
+        <li><b>1995</b>: Lycos и AltaVista</li>
+      </ul>
+      <figure>
+        <img src="img/search.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by  / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
     <h2>Поисковые системы</h2>
-    <ul>
-      <li><b>1994</b>: Yahoo!</li>
-      <li><b>1994</b>: WebCrawler</li>
-      <li><b>1995</b>: Lycos и AltaVista</li>
-      <li><b>1997</b>: Google</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li><b>1994</b>: Yahoo!</li>
+        <li><b>1994</b>: WebCrawler</li>
+        <li><b>1995</b>: Lycos и AltaVista</li>
+        <li><b>1997</b>: Google</li>
+      </ul>
+      <figure>
+        <img src="img/search.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by  / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
     <h2>Поисковые системы</h2>
-    <ul>
-      <li><b>1994</b>: Yahoo!</li>
-      <li><b>1994</b>: WebCrawler</li>
-      <li><b>1995</b>: Lycos и AltaVista</li>
-      <li><b>1997</b>: Google</li>
-      <li><b>1997</b>: Яндекс</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li><b>1994</b>: Yahoo!</li>
+        <li><b>1994</b>: WebCrawler</li>
+        <li><b>1995</b>: Lycos и AltaVista</li>
+        <li><b>1997</b>: Google</li>
+        <li><b>1997</b>: Яндекс</li>
+      </ul>
+      <figure>
+        <img src="img/search.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by  / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
@@ -258,35 +312,68 @@
 
   <section class="slide">
     <h2>Критерии поискового запроса</h2>
-    <ul>
-      <li>длина</li>
-      <li>четкость</li>
-      <li>популярность</li>
-      <li>конкурентность</li>
-      <li>синтаксис</li>
-      <li>география</li>
-    </ul>
+    <div class="columns two" style="height: 100%;">
+      <ul>
+        <li>длина</li>
+        <li>четкость</li>
+        <li>популярность</li>
+        <li>конкурентность</li>
+        <li>синтаксис</li>
+        <li>география</li>
+      </ul>
+      <figure>
+        <img src="img/search.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by  / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
     <h2>Типы поискового запроса</h2>
-    <ul>
-      <li>общий</li>
-      <li>навигационный</li>
-      <li>мультимедийный</li>
-      <li>информационный</li>
-      <li>геозависимые</li>
-    </ul>
+    <div class="columns two" style="height: 100%;">
+      <ul>
+        <li>общий</li>
+        <li>навигационный</li>
+        <li>мультимедийный</li>
+        <li>информационный</li>
+        <li>геозависимые</li>
+      </ul>
+      <figure>
+        <img src="img/search.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by  / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <!-- TODO Устройство поисковой выдачи -->
   <section class="slide">
     <h2>Устройство поисковой выдачи</h2>
-    <ol>
-      <li>Web crawler (обходчик)</li>
-      <li>индекс</li>
-      <li>поисковая система (сервер)</li>
-    </ol>
+    <div class="columns two" style="height: 100%;">
+      <ol>
+        <li>Web crawler (обходчик)</li>
+        <li>индекс</li>
+        <li>поисковая система (сервер)</li>
+      </ol>
+      <figure>
+        <img src="img/search.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by  / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <!-- TODO Поисковая система -->
@@ -307,24 +394,44 @@
   <!-- TODO Инструменты SEO-специалиста -->
   <section class="slide">
     <h2>Инструменты SEO-специалиста</h2>
-    <ol>
-      <li><a href="https://semantica.in/tools/yandex-wordstat-assistant" target="_blank">Yandex Wordstat Assistant</a></li>
-      <li><a href="https://www.bukvarix.com/" target="_blank">Букварикс</a></li>
-      <li><a href="https://keywordtool.io/ru" target="_blank">Keyword Tool</a></li>
-      <li><a href="https://coolakov.ru/tools/razbivka/" target="_blank">Группировка запросов</a></li>
-      <li><a href="https://just-magic.org/" target="_blank">JustMagic</a></li>
-      <li><a href="https://home.snafu.de/tilman/xenulink.html" target="_blank">Xenu</a></li>
-      <li><a href="https://www.similarweb.com/" target="_blank">Similarweb</a></li>
-      <li><a href="https://be1.ru/position-yandex-google/" target="_blank">Проверка позиций сайта</a></li>
-    </ol>
+    <div class="columns two">
+      <ol>
+        <li><a href="https://semantica.in/tools/yandex-wordstat-assistant" target="_blank">Yandex Wordstat Assistant</a></li>
+        <li><a href="https://www.bukvarix.com/" target="_blank">Букварикс</a></li>
+        <li><a href="https://keywordtool.io/ru" target="_blank">Keyword Tool</a></li>
+        <li><a href="https://coolakov.ru/tools/razbivka/" target="_blank">Группировка запросов</a></li>
+        <li><a href="https://just-magic.org/" target="_blank">JustMagic</a></li>
+        <li><a href="https://home.snafu.de/tilman/xenulink.html" target="_blank">Xenu</a></li>
+        <li><a href="https://www.similarweb.com/" target="_blank">Similarweb</a></li>
+        <li><a href="https://be1.ru/position-yandex-google/" target="_blank">Проверка позиций сайта</a></li>
+      </ol>
+      <figure>
+        <img src="img/tools.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
     <h2>Инструменты SEO-специалиста</h2>
-    <ol>
+    <div class="columns two">
+      <ol>
       <li><a href="https://metrika.yandex.ru/" target="_blank">Яндекс.Метрика</a></li>
       <li><a href="https://webmaster.yandex.ru/welcome/" target="_blank">Яндекс.Вебмастер</a></li>
     </ol>
+    <figure>
+      <img src="img/tools.jpg" width="100%" height="100%" alt="" style="
+      max-height: 370px;
+      margin: 0 auto;
+      display: flex;
+      object-fit: contain;
+    ">
+    </figure>
+  </div>
   </section>
 
   <!-- TODO Семантическое ядро -->
@@ -335,13 +442,23 @@
 
   <section class="slide">
     <h2>Семантическое ядро</h2>
-    <ul>
-      <li>проработка структуры сайта</li>
-      <li>продвижение страниц в топ поиска</li>
-      <li>составление контент-плана</li>
-      <li>создание перелинковки на сайте</li>
-      <li>настройка контекстной рекламы</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li>проработка структуры сайта</li>
+        <li>продвижение страниц в топ поиска</li>
+        <li>составление контент-плана</li>
+        <li>создание перелинковки на сайте</li>
+        <li>настройка контекстной рекламы</li>
+      </ul>
+      <figure>
+        <img src="img/core.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
@@ -456,6 +573,14 @@
   <section class="slide">
     <h2>Этапы создания сайта</h2>
     <p>А что, если сразу сделать сайт правильно?</p>
+    <figure>
+      <img src="img/question.png" width="100%" height="100%" alt="" style="
+      max-height: 300px;
+      width: auto;
+      display: flex;
+      object-fit: contain;
+    ">
+    </figure>
   </section>
 
   <section class="slide">
@@ -535,13 +660,24 @@
 
   <section class="slide">
     <h2>Этапы применения дизайн-мышления</h2>
-    <ol>
-      <li>эмпатия</li>
-      <li>анализ и определение проблемы</li>
-      <li>генерация идей</li>
-      <li>прототипирование</li>
-      <li>тест</li>
-    </ol>
+    <div class="columns two">
+      <ol>
+        <li>эмпатия</li>
+        <li>анализ и определение проблемы</li>
+        <li>генерация идей</li>
+        <li>прототипирование</li>
+        <li>тест</li>
+      </ol>
+      <figure>
+        <img src="img/design-thinking.jpg" width="100%" height="100%" alt="" style="
+        max-height: 370px;
+        margin: 0 auto;
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by stories / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <!-- TODO Психология дизайна -->
@@ -558,14 +694,25 @@
 
   <section class="slide">
     <h2>Когнитивные предубеждения</h2>
-    <ol>
-      <li>эффект якоря</li>
-      <li>эффект владения</li>
-      <li>эффект толпы</li>
-      <li>эффект фрейминга</li>
-      <li>предвзятость подтверждения</li>
-      <li>...</li>
-    </ol>
+    <div class="columns two">
+      <ol>
+        <li>эффект якоря</li>
+        <li>эффект владения</li>
+        <li>эффект толпы</li>
+        <li>эффект фрейминга</li>
+        <li>предвзятость подтверждения</li>
+        <li>...</li>
+      </ol>
+      <figure>
+        <img src="img/psi.jpg" width="100%" height="100%" alt="" style="
+        max-height: 350px;
+        /* margin: 0 auto; */
+        display: flex;
+        object-fit: contain;
+      ">
+        <cite class="small" ><a href="http://www.freepik.com" target="_blank">Designed by stories / Freepik</a></cite>
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
@@ -658,23 +805,41 @@
 
   <section class="slide">
     <h2>Сенсорный дизайн: осязание</h2>
-    <ul>
-      <li><b>tap</b>: касание</li>
-      <li><b>double-tap</b>: двойное касание</li>
-      <li><b>swipe</b>: свайп</li>
-      <li><b>scrolling</b>: прокрутка</li>
-      <li><b>click</b>: &laquo;десктопная версия&raquo; касания</li>
-      <li>набор текста на клавиатуре</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li><b>tap</b>: касание</li>
+        <li><b>double-tap</b>: двойное касание</li>
+        <li><b>swipe</b>: свайп</li>
+        <li><b>scrolling</b>: прокрутка</li>
+        <li><b>click</b>: &laquo;десктопная версия&raquo; касания</li>
+        <li>набор текста на клавиатуре</li>
+      </ul>
+      <figure>
+        <img src="img/senc.png" width="100%" height="100%" alt="" style="
+        max-height: 350px;
+        display: flex;
+        object-fit: contain;
+      ">
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
     <h2>Сенсорный дизайн: слух</h2>
-    <ul>
-      <li>звуковые иконки (earcons)</li>
-      <li>декоративные звуки</li>
-      <li>фирменные звуки (hero sounds)</li>
-    </ul>
+    <div class="columns two">
+      <ul>
+        <li>звуковые иконки (earcons)</li>
+        <li>декоративные звуки</li>
+        <li>фирменные звуки (hero sounds)</li>
+      </ul>
+      <figure>
+        <img src="img/senc.png" width="100%" height="100%" alt="" style="
+        max-height: 350px;
+        display: flex;
+        object-fit: contain;
+      ">
+      </figure>
+    </div>
   </section>
 
   <section class="slide">
@@ -706,6 +871,14 @@
   <section class="slide">
     <h2>VUI</h2>
     <p><b>VUI</b> — голосовые пользовательские интерфейсы</p>
+    <figure>
+      <img src="img/vui.jpg" width="100%" height="100%" alt="" style="
+      max-height: 350px;
+      width: auto;
+      display: flex;
+      object-fit: contain;
+    ">
+    </figure>
   </section>
 
   <!-- TODO Юзабилити-аудит -->
