--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
 
   <section class="slide">
     <h2>Чек-лист проверки качества верстки</h2>
-    <p>12. Семантика использована уместно и в полном объёме</p>
+    <p><mark>12. Семантика использована уместно и в полном объёме</mark></p>
     <p><b>Что проверять:</b> HTML-верстку</p>
     <p><b>Чем/где проверять:</b> файл с HTML, инструменты разработчика -> Вкладка <b>Elements</b></p>
     <p><b>Как улучшить:</b> добавить семантические теги</p>
@@ -1019,6 +1019,17 @@
     <p><b>Что проверять:</b> скорость загрузки</p>
     <p><b>Чем/где проверять:</b> инструменты разработчика -> <b>Lighthouse</b></p>
     <p><b>Как улучшить:</b> исправить ошибки и предупреждения в <b>Lighthouse</b></p>
+  </section>
+
+  <section class="slide">
+    <h2>Инструменты для проверки сайта</h2>
+    <ul>
+      <li><a href="https://validator.w3.org/nu/" target="_blank">Валидатор W3C</a></li>
+      <li><a href="http://yoksel.github.io/html-tree/" target="_blank">Генератор HTML-дерева</a></li>
+      <li><a href="https://www.artlebedev.ru/typograf/" target="_blank">Типограф</a></li>
+      <li>Проверка дерева доступности: Chrome DevTools (Accessibility)</li>
+      <li>Проверка SEO, скорости загрузки страницы и доступности: Chrome DevTools (Lighthouse)</li>
+    </ul>
   </section>
 
   <section class="slide clear">
