--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,6 @@
       </li>
     </ol>
   </section>
-
   <section class="slide">
     <h2>Материалы и ссылки ч.2/5</h2>
     <ol>
@@ -1090,7 +1089,6 @@
       </li>
     </ol>
   </section>
-
   <section class="slide">
     <h2>Материалы и ссылки ч.3/5</h2>
     <ol>
@@ -1117,7 +1115,6 @@
       </li>
     </ol>
   </section>
-
   <section class="slide">
     <h2>Материалы и ссылки ч.4/5</h2>
     <ol>
@@ -1144,7 +1141,6 @@
       </li>
     </ol>
   </section>
-
   <section class="slide">
     <h2>Материалы и ссылки ч.5/5</h2>
     <ol>
@@ -1158,6 +1154,119 @@
         <a href="http://yoksel.github.io/html-tree/" target="_blank">Генератор HTML-дерева</a>
       </li>
     </ol>
+  </section>
+
+  <!-- TODO: вопросы для тестирования -->
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>Что такое WCAG?</b></p>
+    <ol style="font-size: 18px;">
+      <li>руководства по доступности веб-контента</li>
+      <li>это комплекс мер по улучшению сайта для его ранжирования в поисковых системах</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>руководства по доступности веб-контента</b></p>
+    </details>
+  </section>
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>Доступность (accessibility) — это концепция создания веб-контента, адаптированного под людей:</b></p>
+    <ol style="font-size: 18px;">
+      <li>с ограниченными возможностями</li>
+      <li>с дополнительными полномочиями</li>
+      <li>такой концепции нет, весь контент всегда доступен</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>с ограниченными возможностями</b></p>
+    </details>
+  </section>
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>Что такое скринридер?</b></p>
+    <ol style="font-size: 18px;">
+      <li>программа, которая превращает контент интерфейсов в речь или шрифт Брайля</li>
+      <li>программа, которая превращает речь в текст</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>программа, которая превращает контент интерфейсов в речь или шрифт Брайля</b></p>
+    </details>
+  </section>
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>Что такое SEO?</b></p>
+    <ol style="font-size: 18px;">
+      <li>Комплекс мер по улучшению сайта для его ранжирования в поисковых системах</li>
+      <li>Секретная техника по увеличению продаж на сайте</li>
+      <li>Продвижение товара или услуги через различные социальные платформы</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>Комплекс мер по улучшению сайта для его ранжирования в поисковых системах</b></p>
+    </details>
+  </section>
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>SEO-аудит сайтов – это:</b></p>
+    <ol style="font-size: 18px;">
+      <li>проверка сайта на соответствие требованиям поисковых систем</li>
+      <li>проверка сайта на удобство работы с ним</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>проверка сайта на соответствие требованиям поисковых систем</b></p>
+    </details>
+  </section>
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>UX-дизайн (User Experience&nbsp;&mdash; &laquo;пользовательский опыт&raquo;)</b></p>
+    <ol style="font-size: 18px;">
+      <li>отвечает за то, как интерфейс работает</li>
+      <li>отвечает за то, как интерфейс выглядит</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>отвечает за то, как интерфейс работает</b></p>
+    </details>
+  </section>
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>UI-дизайн (User Interface&nbsp;&mdash; &laquo;пользовательский интерфейс&raquo;)</b></p>
+    <ol style="font-size: 18px;">
+      <li>отвечает за то, как интерфейс работает</li>
+      <li>отвечает за то, как интерфейс выглядит</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>отвечает за то, как интерфейс выглядит</b></p>
+    </details>
+  </section>
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>Юзабилити-аудит — это проверка: </b></p>
+    <ol style="font-size: 18px;">
+      <li>сайта на удобство работы с ним</li>
+      <li>скорости загрузки сайта</li>
+      <li>авторских прав на изображения, используемых на сайте</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>сайта на удобство работы с ним</b></p>
+    </details>
+  </section>
+  <section class="slide">
+    <h2>Вопросы</h2>
+    <p style="font-size: 18px;"><b>Каким инструментом можно проверить ошибки в разметке сайта?</b></p>
+    <ol style="font-size: 18px;">
+      <li>Валидатор W3C</li>
+      <li>Microsoft Word</li>
+    </ol>
+    <details style="font-size: 18px;">
+      <summary>Ответ</summary>
+      <p><b>Валидатор W3C</b></p>
+    </details>
   </section>
 
   <section class="slide clear">
