--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
   <!-- TODO Чек-лист проверки качества верстки -->
   <section class="slide">
     <h2>Чек-лист проверки качества верстки</h2>
-    <p>Весь спискок можно посмотреть на <a href="https://disk.yandex.ru/d/J_J4Q6XTWwH82A" target="_blank">Яндекс диске</a></p>
+    <p>Весь список можно посмотреть на <a href="https://disk.yandex.ru/d/J_J4Q6XTWwH82A" target="_blank">Яндекс диске</a></p>
   </section>
 
   <!-- TODO Чек-лист проверки качества верстки -->
